// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly unit is inches 1`] = `
<div
  className="rect-options"
>
  <div
    className="option-block"
    key="rounded-corner"
  >
    <div
      className="label"
    >
      Rounded corner
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      defaultValue={0}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={0}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="in"
    />
  </div>
  <InFillBlock
    elem={
      <div
        id="flux"
      />
    }
  />
</div>
`;

exports[`should render correctly unit is not inches 1`] = `
<div
  className="rect-options"
>
  <div
    className="option-block"
    key="rounded-corner"
  >
    <div
      className="label"
    >
      Rounded corner
    </div>
    <UnitInput
      abbr={false}
      className={
        {
          "option-input": true,
        }
      }
      defaultValue={1}
      disabled={false}
      displayMultiValue={false}
      forceUsePropsUnit={false}
      getValue={[Function]}
      isDoOnInput={false}
      max={9007199254740991}
      min={0}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      step={1}
      type="text"
      unit="mm"
    />
  </div>
  <InFillBlock
    elem={
      <div
        id="flux"
      />
    }
  />
</div>
`;
